# RUST-APPS

./: Cargo.toml  README.md  nexus-install.ps1  nexus-tui.ps1
agl-tui/: Cargo.toml  README.md
agl-tui/scripts/: worker.js
agl-tui/scripts/bots/: bot-cleanup.ps1  bot-generate-svg.ps1  bot-gpu-dispatch.ps1
agl-tui/scripts/svg-kernels/: matmul.wgsl
agl-tui/src/: app.rs  main.rs  tui.rs
agl-tui/src/agl/: mod.rs
agl-tui/src/engine/: mod.rs
agl-tui/src/gpu/: mod.rs
agl-tui/src/inference/: mod.rs
agl-tui/src/swarm/: mod.rs
agl-tui/src/ui/: mod.rs
agl-tui/src/utils/: mod.rs
src/: ai.rs  builder.rs  commands.rs  config.rs  main.rs  project.rs  types.rs  web.rs
templates/: index.html  kuhul.css  kuhul.dtd  kuhul.xml
