[package]
name = "nexus-studio-ai"
version = "1.0.0"
edition = "2021"
description = "Build apps instantly with Phi-3 AI - Rust CLI"
authors = ["Nexus Studio Team"]
license = "MIT"
repository = "https://github.com/nexus-studio/cli"

[features]
default = ["mlc", "web", "ai"]
mlc = ["tvm-rt", "llvm-rt"]
web = ["warp", "tokio", "serde_json", "serde", "open"]
ai = ["llm", "candle-core", "tokenizers"]
full = ["mlc", "web", "ai"]

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"

# Filesystem
walkdir = "2.3"
ignore = "0.4"
glob = "0.3"

# AI/ML dependencies (optional)
llm = { version = "0.2", optional = true }
candle-core = { version = "0.3", optional = true, features = ["cuda"] }
tokenizers = { version = "0.14", optional = true }
tvm-rt = { version = "0.8", optional = true }
llvm-rt = { version = "0.8", optional = true }

# Web server (optional)
warp = { version = "0.3", optional = true }
tower = { version = "0.4", optional = true }
open = { version = "5.0", optional = true }

# Templating
handlebars = "4.3"
tera = "1.18"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"], optional = true }
rusqlite = { version = "0.29", optional = true }

# Networking
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.4"
futures = "0.3"

# UI/Terminal
ratatui = "0.23"
crossterm = "0.26"
tui-tree-widget = "0.6"
indicatif = "0.17"

# Utils
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
tempfile = "3.6"
rayon = "1.7"
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.6"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "nexus"
path = "src/main.rs"

[[bin]]
name = "nexus-web"
path = "src/web.rs"
required-features = ["web"]

[[bin]]
name = "nexus-ai"
path = "src/ai.rs"
required-features = ["ai"]
