[package]
name = "agl-tui"
version = "0.1.0"
edition = "2021"
description = "AGL T-UI engine scaffold"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.23"
crossterm = "0.26"
tokio = { version = "1.0", features = ["full"] }
